Fixes fonts, spacing, and kerning

--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@ body{
     text-align: center;
 }
 
+/* Link styles */
 a{
     text-decoration: none;
+	color: blue;
 }
 
 a:hover{
     text-decoration: underline;
+	color: blue;
 }
 
+a:active{
+	color: red;
+}
+
+a:visited{
+}
+
+/* White backer */
 #main{
     background: white url("images/me.png") 20px 20px no-repeat;
     width: 600px;
-    height: 275px;
+    height: 250px;
     background-color: #FFFFFF;
     margin: 25px auto;
     border: solid 1px #000000;
@@ -25,27 +36,29 @@ a:hover{
     text-align: right;
 }
 
-h2{
+/* Header text styles */
+h1{
     text-align: right;
-    font-family: "Droid Sans";
     font-size: 24pt;
+	margin: 0;
 }
 
-h3{
+h2{
     text-align: right;
     font-size: 11pt;
     margin: 0;
 }
 
+/* Padding between headers */
 ul{
     list-style: none;
-    margin: 20pt 0 0;
+    margin: 12pt 0 0;
     padding-left: 15px;
 }
 
+/* Contact info and images */
 li{
     text-align: right;
-    font-family: "Droid Sans";
     font-size: 10.5pt;
 }
 
@@ -55,6 +68,7 @@ li img{
     margin-right: 5px;
 }
 
+/* PGP key footer */
 footer{
     text-align: center;
     font-size: x-small;
